Add path to comments interface

--- a/src/main/webapp/common/layout/template.zul
+++ b/src/main/webapp/common/layout/template.zul
@@ -33,7 +33,7 @@
                         <menu label="Entities">
                             <menupopup>
                                 <menuitem label="Snippets" href="/"/>
-                                <menuitem label="Comments" href="/"/>
+                                <menuitem label="Comments" href="/comments/comments.zul"/>
                                 <menuitem label="Notes" href="/"/>
                             </menupopup>
                         </menu>
