Add first interface to manage labels
Add an interface through wich labels can be inserted, updated and deleted.

The interface consists of:

- A list of labels with a row per label, which includes a "Delete" button to
	remove the label.
- An "Add" button to create new labels.

Clicking in a row edits the corresponding label.

Signed-off-by: Francisco Rocha <rocha.francisco.a@gmail.com>

--- a/src/main/webapp/common/layout/template.zul
+++ b/src/main/webapp/common/layout/template.zul
@@ -34,7 +34,7 @@
                             <menupopup>
                                 <menuitem label="Snippets" href="/"/>
                                 <menuitem label="Comments" href="/comments/comments.zul"/>
-                                <menuitem label="Notes" href="/"/>
+                                <menuitem label="Labels" href="/labels/labels.zul" />
                             </menupopup>
                         </menu>
                     </menubar>
