Add Edit button to the label management interface
Add a button to edit labels in the label managemente interface.

Labels may be edited in the label management interface by clicking in the
corresponding row. A new button is added to the interface for the same
purpose.

Signed-off-by: Francisco Rocha <rocha.francisco.a@gmail.com>

--- a/src/main/webapp/labels/_listLabels.zul
+++ b/src/main/webapp/labels/_listLabels.zul
@@ -29,6 +29,8 @@
                 onClick="controller.openEditForm(self.value)">
                 <label value="@{label.name}" />
                 <hbox>
+                    <button label="Edit" tooltiptext="Edit"
+                        onClick="controller.openEditForm(self.parent.parent.value)" />
                     <button label="Delete" tooltiptext="Delete"
                         onClick="controller.delete(self.parent.parent.value)" />
                 </hbox>
