List of snippets form added with edit and delete operations (2nd try)
Added a form with lists the title of each snippets and gives the posibility to delete the snippet or change its title. Some changes in the Snippet and SnippetCode entities and SnippetDAO java class has been made to make the database synchronization possible

--- a/src/main/webapp/common/layout/template.zul
+++ b/src/main/webapp/common/layout/template.zul
@@ -32,7 +32,7 @@
                     <menubar>
                         <menu label="Entities">
                             <menupopup>
-                                <menuitem label="Snippets" href="/"/>
+                                <menuitem label="Snippets" href="/snippets/snippets.zul"/>
                                 <menuitem label="Comments" href="/comments/comments.zul"/>
                                 <menuitem label="Labels" href="/labels/labels.zul" />
                             </menupopup>
