Add SnippetCode UI
Add menuitem in template.zul.

--- a/src/main/webapp/common/layout/template.zul
+++ b/src/main/webapp/common/layout/template.zul
@@ -33,6 +33,7 @@
                         <menu label="Entities">
                             <menupopup>
                                 <menuitem label="Snippets" href="/snippets/snippets.zul"/>
+                                <menuitem label="SnippetCodes" href="/snippetcodes/snippetcodes.zul"/>
                                 <menuitem label="Comments" href="/comments/comments.zul"/>
                                 <menuitem label="Labels" href="/labels/labels.zul" />
                             </menupopup>
