Improve SnippetCode UI with JS.
Increase number of rows in _editSnippetCode.zul.

--- a/src/main/webapp/snippetcodes/_editSnippetCode.zul
+++ b/src/main/webapp/snippetcodes/_editSnippetCode.zul
@@ -35,7 +35,7 @@
                         <rows>
                             <row>
                                 <label value="Code" />
-                                <textbox width="500px" value="@{controller.snippetCode.code}" />
+                                <textbox rows="10" width="500px" value="@{controller.snippetCode.code}" />
                             </row>
                             <row>
                                 <label value="Snippet" />
