Modified Snippets link from main menu to sent to editing snippets form done in first iteration
Also a 'Home' link has been added to the main menu and a 'Cancel' buton to the snippets list

--- a/src/main/webapp/common/layout/template.zul
+++ b/src/main/webapp/common/layout/template.zul
@@ -29,9 +29,10 @@
                 <!-- Menu -->
                 <hbox style="margin-top: 10px; margin-bottom: 8px;">
                     <hbox>
+                        <a href="/">Home</a> |
                         <a href="/pages/search.zul">Search</a> |
                         <a href="/pages/labels.zul">Labels</a> |
-                        <a href="/pages/snippets.zul">Snippets</a>
+                        <a href="/snippets/snippets.zul">Snippets</a>
                     </hbox>
 
                     <hbox pack="end">
