Save snippet bug resolved
In the edit snippet form there was a bug when creating a new snippet.
The user could click on 'Add code' button but before saving it on database what produced an exception error.

To solve it I have added code that adds the following:
- the 'Save' and 'Save and continue' buttons are enabled only if there is a title and a description for the new snippet
- the 'Add code' button is enabled only after the new snippet has been saved in the database

--- a/src/main/webapp/snippets/_editSnippet.zul
+++ b/src/main/webapp/snippets/_editSnippet.zul
@@ -23,13 +23,16 @@
         <vbox>
             <label value="Snippet properties edition:" style="font-weight: bold;"/>
             <hbox style="margin-top: 1em;">
-                    <label value="Enter title:  "/><textbox cols="100" rows="1" value="@{controller.snippet.title}" constraint="no empty" tooltiptext="Name which identifies the snippet, what it does"/>
+                    <label value="Enter title:  "/>
+                    <textbox id="titleTextbox" cols="100" rows="1" value="@{controller.snippet.title}" tooltiptext="Name which identifies the snippet, what it does"
+                    onBlur="controller.activateSaveButton()" />
             </hbox>
             <label value="Enter description:"/>
-            <textbox width="100%" rows="10" value="@{controller.snippet.description}" constraint="no empty" tooltiptext="Description of what the snippet does and other information the user regards interesting"/>
+            <textbox id="descriptionTextbox" width="100%" rows="10" value="@{controller.snippet.description}" tooltiptext="Description of what the snippet does and other information the user regards interesting"
+            onBlur="controller.activateSaveButton()" />
 
             <separator />
-            <button label="Add code" onClick="controller.addSnippetCode()" />
+            <button id="addcodeButton" label="Add code" onClick="controller.addSnippetCode()" />
 
             <grid id="snippetCodeGrid" model="@{controller.snippet.SnippetCodes}" mold="paging"
                 pageSize="10" fixedLayout="true" width="100%">
@@ -48,9 +51,9 @@
             </grid>
 
             <hbox>
-                <button label="Save"
+                <button id="saveButton" label="Save"
                     onClick="controller.saveAndExit()" />
-                <button label="Save and Continue"
+                <button id="saveandcontinueButton" label="Save and Continue"
                     onClick="controller.saveAndContinue()" />
                 <button label="Cancel"
                     onClick="controller.cancel()" />
