Double click on a saved snippet, allows edition of its name.
Update snippets listbox in index.zul appending a hiden textbox.

--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -46,7 +46,15 @@
                             <listheader label="Snippet" />
                         </listhead>
                         <listitem self="@{each='snippet'}" value="@{snippet}">
-                            <listcell label="@{snippet.title}" />
+                           <listcell id="editableListcell">
+                                <label value="@{snippet.title}"
+                                visible="true"/>
+                                <textbox id="editableTextbox"
+                                    value="@{snippet.title}"
+                                    visible="false"
+                                    onOK="controller.updateSnippetTitle(self.parent.parent.value)"
+                                    />
+                            </listcell>
                         </listitem>
                     </listbox>
 
